--- a/src/main/resources/templates/th/askBoard/askBoardReplyInsert.html
+++ b/src/main/resources/templates/th/askBoard/askBoardReplyInsert.html
@@ -28,6 +28,7 @@
         </div>
         <input type="hidden" id="askGroupNo" name="askGroupNo" th:value="${detail.askGroupNo}"/>
         <input type="hidden" id="askIndent" name="askIndent" th:value="${detail.askIndent}"/>
+        <input type="hidden" id="askStep" name="askStep" th:value="${detail.askStep}"/>
         <button type="button" id="replyInsertBoard"
                 class="button button--color-gray-4 button--size-30 button--shape-4 card-detail-writer__follow">등록</button>
     </form>
