--- a/src/main/resources/templates/th/member/mypage/profile/receiveNote.html
+++ b/src/main/resources/templates/th/member/mypage/profile/receiveNote.html
@@ -5,42 +5,60 @@
 <head>
     <meta charset="UTF-8">
     <title>보낸 쪽지함</title>
-
-    <script src="https://code.jquery.com/jquery-latest.js"></script>
+    <th:block layout:fragment="css">
+        <link rel="stylesheet" th:href="@{/css/askBoard.css}">
+        <link rel="stylesheet" th:href="@{/css/profile.css}">
+    </th:block>
     <script type="text/javascript" th:src="@{/js/profile.js}"></script>
 </head>
 <body>
 <div layout:fragment="content">
-<th:block th:replace="th/fragments/navBar_myPage"></th:block>
-    <th:block th:replace="th/fragments/navBar_myPage_profile"></th:block>
-    <h2><a href="/member/sendNote">받은 쪽지함</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;보낸 쪽지함</h2>
-<div class="container">
-    <form action="/noteSending" method="post" id="sending" name="sending">
+    <th:block th:replace="th/fragments/navBar_myPage"></th:block>
+    <div class="container">
+        <th:block th:replace="th/fragments/navBar_myPage_profile"></th:block>
+        <div class="myhome-nav">
+            <nav class="page-navigation myhome-nav__contents">
+                <ul>
+                    <li class="page-navigation__item  page-navigation__item--active">
+                        <a target="_self" th:href="@{/member/receiveNote}">받은쪽지함</a>
+                    </li>
+                    <li class="page-navigation__item">
+                        <a target="_self" th:href="@{/member/sendNote}">보낸쪽지함</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+        <br>
+        <form action="/noteSending" method="post" id="sending" name="sending">
 
-    <input type="button" id="send" name="send" value="쪽지보내기">
-    <input type="button" id="delete" name="delete" value="삭제">
+            <input type="button" id="send" name="send"
+                   class="button button--color-gray-4 button--size-30 button--shape-4 card-detail-writer__follow"
+                   value="쪽지보내기">
+            <input type="button" id="delete" name="delete"
+                   class="button button--color-gray-4 button--size-30 button--shape-4 card-detail-writer__follow"
+                   value="삭제">
+            <br>
+            <table class="table table-hover">
+                <tr>
+                    <th><input type="checkbox" name="allcheck" id="allcheck"/></th>
+                    <th>쪽지내용</th>
+                    <th>보낸사람</th>
+                </tr>
 
-    <table class="table table-hover">
-        <tr>
-            <th><input type="checkbox" name="allcheck" id="allcheck"/></th>
-            <th>쪽지내용</th>
-            <th>받은사람</th>
-        </tr>
-
-        <th:block th:each="receive : ${receiveNote}">
-            <tr>
-                <td class="select_note">
-                    <input type="checkbox" name="check" id="check" class="check" th:data-No="${receive.msgNo}"
-                    th:data-sendId="${receive.receiveId}"/>
-                </td>
-                <td th:onclick="'javascript: '" th:text="${receive.msgContent}"/><!-- onclick ajax로 연결 --></td>
-                <td th:text="${receive.receiveId}"/>
-            </tr>
-        </th:block>
-    </table>
-        <input type="hidden" id="receiveId" name="receiveId" value=""/>
-    </form>
-</div>
+                <th:block th:each="receive : ${receiveNote}">
+                    <tr>
+                        <td class="select_note">
+                            <input type="checkbox" name="check" id="check" class="check" th:data-No="${receive.msgNo}"
+                                   th:data-sendId="${receive.memberId}"/>
+                        </td>
+                        <td th:onclick="'javascript: '" th:text="${receive.msgContent}"/><!-- onclick ajax로 연결 --></td>
+                        <td th:text="${receive.memberId}"/>
+                    </tr>
+                </th:block>
+            </table>
+            <input type="hidden" id="receiveId" name="receiveId" value=""/>
+        </form>
+    </div>
 </div>
 </body>
 </html>
