--- a/src/main/resources/templates/th/fragments/navBar_myPage_profile.html
+++ b/src/main/resources/templates/th/fragments/navBar_myPage_profile.html
@@ -5,9 +5,9 @@
         <div class="w3-bar">
             <a th:href="@{/member/myBoard}"
                class="w3-bar-item w3-button w3-hover-none w3-border-white w3-bottombar w3-hover-border-blue w3-hover-text-blue">내 게시물</a>
-            <a th:href="@{/member/viewFollow}"
-               class="w3-bar-item w3-button w3-hover-none w3-border-white w3-bottombar w3-hover-border-blue w3-hover-text-blue">팔로워</a>
-            <a th:href="@{/member/sendNote}"
+            <!--<a th:href="@{/member/viewFollow}"
+               class="w3-bar-item w3-button w3-hover-none w3-border-white w3-bottombar w3-hover-border-blue w3-hover-text-blue">팔로워</a>-->
+            <a th:href="@{/member/receiveNote}"
                class="w3-bar-item w3-button w3-hover-none w3-border-white w3-bottombar w3-hover-border-blue w3-hover-text-blue">쪽지</a>
         </div>
     </div>
