--- a/src/main/resources/templates/th/main/productDetails.html
+++ b/src/main/resources/templates/th/main/productDetails.html
@@ -9,94 +9,192 @@
         <link rel="stylesheet" th:href="@{/css/mainContent.css}">
     </th:block>
     <link th:href="@{/css/productPage.css}" rel="stylesheet"/>
-    <!--    <link rel="stylesheet" th:href="@{https://www.w3schools.com/w3css/4/w3.css}">-->
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.css"/>
 
+    <script>
+        $(document).ready(function () {
+            $("#inputGroupSelect01").focus(function () {
+                var x = document.getElementById("inputGroupSelect01").options[0].disabled = true;
+            });
+        });
+    </script>
+
+    <script>
+        function currentDiv(n) {
+            showDivs(slideIndex = n);
+        }
+
+        function showDivs(n) {
+            var i;
+            var x = document.getElementsByClassName("mySlides");
+            var dots = document.getElementsByClassName("demo");
+            if (n > x.length) {
+                slideIndex = 1
+            }
+            if (n < 1) {
+                slideIndex = x.length
+            }
+            for (i = 0; i < x.length; i++) {
+                x[i].style.display = "none";
+            }
+            for (i = 0; i < dots.length; i++) {
+                dots[i].className = dots[i].className.replace(" w3-opacity-off", "");
+            }
+            x[slideIndex - 1].style.display = "block";
+            dots[slideIndex - 1].className += " w3-opacity-off";
+        }
+    </script>
 
 </head>
 <body>
 <div layout:fragment="content" class="mt-5">
     <div class="container">
         <div class="row">
-            <!--            <div class="w3-content" style="max-width:400px">-->
-            <!--                <img class="mySlides" th:src="@{'/uploadImg/'+${product.productMainImg}}"-->
-            <!--                     style="width:100%;display:none">-->
-            <!--                <img class="mySlides" th:src="@{'/uploadImg/'+${product.productSubImg1}}" style="width:100%">-->
-            <!--                <img class="mySlides" th:src="@{'/uploadImg/'+${product.productSubImg2}}"-->
-            <!--                     style="width:100%;display:none">-->
+            <div class="w3-content" style="max-width:450px">
 
-            <!--                <div class="w3-row-padding w3-section">-->
-            <!--                    <div class="w3-col s4">-->
-            <!--                        <img class="demo w3-opacity w3-hover-opacity-off"-->
-            <!--                             th:src="@{'/uploadImg/'+${product.productMainImg}}" style="width:100%;cursor:pointer"-->
-            <!--                             onclick="currentDiv(1)">-->
-            <!--                    </div>-->
-            <!--                    <div class="w3-col s4">-->
-            <!--                        <img class="demo w3-opacity w3-hover-opacity-off"-->
-            <!--                             th:src="@{'/uploadImg/'+${product.productSubImg1}}" style="width:100%;cursor:pointer"-->
-            <!--                             onclick="currentDiv(2)">-->
-            <!--                    </div>-->
-            <!--                    <div class="w3-col s4">-->
-            <!--                        <img class="demo w3-opacity w3-hover-opacity-off"-->
-            <!--                             th:src="@{'/uploadImg/'+${product.productSubImg2}}" style="width:100%;cursor:pointer"-->
-            <!--                             onclick="currentDiv(3)">-->
-            <!--                    </div>-->
-            <!--                </div>-->
-
-
-            <div class="col-md-4">
-                <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
-                    <div class="carousel-inner">
-                        <div class="carousel-item active">
-                            <img th:src="@{'/uploadImg/'+${product.productMainImg}}" class="d-block w-100" alt="...">
-                        </div>
-                        <div class="carousel-item">
-                            <img th:src="@{'/uploadImg/'+${product.productSubImg1}}" class="d-block w-100" alt="...">
-                        </div>
-                        <div class="carousel-item">
-                            <img th:src="@{'/uploadImg/'+${product.productSubImg2}}" class="d-block w-100" alt="...">
-                        </div>
-                        <div class="carousel-item">
-                            <img th:src="@{'/uploadImg/'+${product.productSubImg3}}" class="d-block w-100" alt="...">
-                        </div>
-
-                        <input type="hidden" id="productName" th:value="${product.productName}">
-                        <input type="hidden" id="productNo" th:value="${product.productNo}">
-
-
-                    </div>
-                    <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Previous</span>
-                    </a>
-                    <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Next</span>
-                    </a>
+                <div th:if="${product.productMainImg}">
+                    <img class="mySlides" th:src="@{'/uploadImg/'+${product.productMainImg}}"
+                         style="width:100%;display:none">
                 </div>
+                <div th:unless="${product.productMainImg}">
+                    <img class="mySlides" th:src="@{/uploadImg/errorImg/image-not-available.png}"
+                         style="width:100%;display:none">
+                </div>
+                <div th:if="${product.productSubImg1}">
+                    <img class="mySlides" th:src="@{'/uploadImg/'+${product.productSubImg1}}" style="width:100%">
+                </div>
+                <div th:unless="${product.productSubImg1}">
+                    <img class="mySlides" th:src="@{/uploadImg/errorImg/image-not-available.png}" style="width:100%">
+                </div>
+                <div th:if="${product.productSubImg2}">
+                    <img class="mySlides" th:src="@{'/uploadImg/'+${product.productSubImg2}}"
+                         style="width:100%;display:none">
+                </div>
+                <div th:unless="${product.productSubImg2}">
+                    <img class="mySlides" th:src="@{/uploadImg/errorImg/image-not-available.png}"
+                         style="width:100%;display:none">
+                </div>
+                <div th:if="${product.productSubImg3}">
+                    <img class="mySlides" th:src="@{'/uploadImg/'+${product.productSubImg3}}"
+                         style="width:100%;display:none">
+                </div>
+                <div th:unless="${product.productSubImg3}">
+                    <img class="mySlides" th:src="@{/uploadImg/errorImg/image-not-available.png}"
+                         style="width:100%;display:none">
+                </div>
+
+                <div class="w3-row-padding w3-section">
+                    <div class="w3-col s3" th:if="${product.productMainImg}">
+                        <img class="demo w3-opacity w3-hover-opacity-off"
+                             th:src="@{'/uploadImg/'+${product.productMainImg}}" style="width:100%;cursor:pointer"
+                             onclick="currentDiv(1)">
+                    </div>
+                    <div class="w3-col s3" th:unless="${product.productMainImg}">
+                        <img class="demo w3-opacity w3-hover-opacity-off"
+                             th:src="@{/uploadImg/errorImg/image-not-available.png}" style="width:100%;cursor:pointer"
+                             onclick="currentDiv(1)">
+                    </div>
+
+                    <div class="w3-col s3" th:if="${product.productSubImg1}">
+                        <img class="demo w3-opacity w3-hover-opacity-off"
+                             th:src="@{'/uploadImg/'+${product.productSubImg1}}" style="width:100%;cursor:pointer"
+                             onclick="currentDiv(2)">
+                    </div>
+                    <div class="w3-col s3" th:unless="${product.productSubImg1}">
+                        <img class="demo w3-opacity w3-hover-opacity-off"
+                             th:src="@{/uploadImg/errorImg/image-not-available.png}" style="width:100%;cursor:pointer"
+                             onclick="currentDiv(2)">
+                    </div>
+
+                    <div class="w3-col s3" th:if="${product.productSubImg2}">
+                        <img class="demo w3-opacity w3-hover-opacity-off"
+                             th:src="@{'/uploadImg/'+${product.productSubImg2}}" style="width:100%;cursor:pointer"
+                             onclick="currentDiv(3)">
+                    </div>
+                    <div class="w3-col s3" th:unless="${product.productSubImg2}">
+                        <img class="demo w3-opacity w3-hover-opacity-off"
+                             th:src="@{/uploadImg/errorImg/image-not-available.png}" style="width:100%;cursor:pointer"
+                             onclick="currentDiv(3)">
+                    </div>
+
+                    <div class="w3-col s3" th:if="${product.productSubImg3}">
+                        <img class="demo w3-opacity w3-hover-opacity-off"
+                             th:src="@{'/uploadImg/'+${product.productSubImg3}}" style="width:100%;cursor:pointer"
+                             onclick="currentDiv(4)">
+                    </div>
+                    <div class="w3-col s3" th:unless="${product.productSubImg3}">
+                        <img class="demo w3-opacity w3-hover-opacity-off"
+                             th:src="@{/uploadImg/errorImg/image-not-available.png}" style="width:100%;cursor:pointer"
+                             onclick="currentDiv(4)">
+                    </div>
+                </div>
+
+                <!--            <div class="col-md-4">-->
+                <!--                <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">-->
+                <!--                    <div class="carousel-inner">-->
+                <!--                        <div class="carousel-item active" th:if="${product.productMainImg}">-->
+                <!--                            <img th:src="@{'/uploadImg/'+${product.productMainImg}}" class="d-block w-100" alt="...">-->
+                <!--                        </div>-->
+                <!--                        <div class="carousel-item active" th:unless="${product.productMainImg}">-->
+                <!--                            <img th:src="@{/uploadImg/errorImg/image-not-available.png}" class="d-block w-100" alt="...">-->
+                <!--                        </div>-->
+
+                <!--                        <div class="carousel-item" th:if="${product.productSubImg1}">-->
+                <!--                            <img th:src="@{'/uploadImg/'+${product.productSubImg1}}" class="d-block w-100" alt="...">-->
+                <!--                        </div>-->
+                <!--                        <div class="carousel-item" th:unless="${product.productSubImg1}">-->
+                <!--                            <img th:src="@{/uploadImg/errorImg/image-not-available.png}" class="d-block w-100" alt="...">-->
+                <!--                        </div>-->
+
+                <!--                        <div class="carousel-item" th:if="${product.productSubImg2}">-->
+                <!--                            <img th:src="@{'/uploadImg/'+${product.productSubImg2}}" class="d-block w-100" alt="...">-->
+                <!--                        </div>-->
+                <!--                        <div class="carousel-item" th:unless="${product.productSubImg2}">-->
+                <!--                            <img th:src="@{/uploadImg/errorImg/image-not-available.png}" class="d-block w-100" alt="...">-->
+                <!--                        </div>-->
+
+                <!--                        <div class="carousel-item" th:if="${product.productSubImg3}">-->
+                <!--                            <img th:src="@{'/uploadImg/'+${product.productSubImg3}}" class="d-block w-100" alt="...">-->
+                <!--                        </div>-->
+                <!--                        <div class="carousel-item" th:unless="${product.productSubImg3}">-->
+                <!--                            <img th:src="@{/uploadImg/errorImg/image-not-available.png}" class="d-block w-100" alt="...">-->
+                <!--                        </div>-->
+
+                <!--                        <input type="hidden" id="productName" th:value="${product.productName}">-->
+                <!--                        <input type="hidden" id="productNo" th:value="${product.productNo}">-->
+
+                <!--                    </div>-->
+                <!--                    <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">-->
+                <!--                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>-->
+                <!--                        <span class="sr-only">Previous</span>-->
+                <!--                    </a>-->
+                <!--                    <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">-->
+                <!--                        <span class="carousel-control-next-icon" aria-hidden="true"></span>-->
+                <!--                        <span class="sr-only">Next</span>-->
+                <!--                    </a>-->
+                <!--                </div>-->
             </div>
             <div class="col-md-7">
                 <div class="production-item-stats">
                     <h1 class="production-selling-header__title"><p
-                            class="production-selling-header__title__brand-wrap"><a
-                            class="production-selling-header__title__brand"
+                            class="production-selling-header__title__brand-wrap">
+                        <a class="production-selling-header__title__brand"
                             href="" th:value="${product.productNo}" th:text="${product.sellerName}"></a>
                     </p><span class="production-selling-header__title__name" th:value="${product.productName}"
                               th:text="${product.productName}" th:id="pName"></span>
                     </h1>
                     <h4><span class="production-selling-header__price__original"
-                              th:text="${product.sellPrice}"></span></h4>
+                              th:text="${product.sellPrice} +'원'"></span></h4>
                     <h4><span class="production-selling-header__price__customer"
-                              th:text="${product.customerPrice}"></span></h4>
-                    <h4><span class="production-selling-header__price__purchase"
-                              th:text="${product.purchasePrice}"></span></h4>
+                              th:text="${product.customerPrice}"></span><span class="won">원</span></h4>
                 </div>
                 <form action="" method="post" th:object="${basketVO}">
                     <div class="input-group">
                         <select th:field="*{productColor}" class="custom-select col-md-7" th:id="inputGroupSelect01">
-                            <option selected value="">색상을 선택해주세요</option>
+                            <option selected value="" id="disabled">색상을 선택해주세요</option>
                             <option id="colorSelect" th:each="color : ${product.colorCodeVOList}"
                                     th:value="${color}"
                                     th:utext="${color}"/>
@@ -127,8 +225,6 @@
                 </form>
             </div>
         </div>
-
-
         <div class="container">
             <ul class="nav nav-pills mb-3 justify-content-center sticky-top bg-white"
                 style="width: auto; background-color: white" id="pills-tab" role="tablist">
@@ -148,8 +244,11 @@
             </ul>
             <div class="tab-content" id="pills-tabContent">
                 <div class="tab-pane fade show active" id="pills-productInfo" role="tabpanel"
-                     aria-labelledby="pills-productInfo-tab">
+                     aria-labelledby="pills-productInfo-tab" th:if="${product.productExpImg}">
                     <img th:src="@{'/uploadImg/'+${product.productExpImg}}" class="d-block w-100" alt="..."></div>
+                <div class="tab-pane fade show active" id="pills-productInfo" role="tabpanel"
+                     aria-labelledby="pills-productInfo-tab" th:unless="${product.productExpImg}">
+                    <img th:src="@{/uploadImg/errorImg/image-not-available.png}" class="d-block w-100" alt="..."></div>
 
 
                 <div class="tab-pane fade" id="pills-reviews" role="tabpanel"
@@ -158,9 +257,15 @@
                     <div class="card mb-3" th:each="reviews:${reviewList}" style="max-width: 540px;">
                         <div class="row no-gutters">
                             <div class="col-md-2">
+                                <div >
                                 <img th:src="${reviewUrlImg} + ${reviews.reviewImg1}" class="card-img" alt="...">
-                                <img src="..." class="card-img" alt="...">
-                                <img src="..." class="card-img" alt="...">
+                                </div>
+                                <div>
+                                <img th:src="${reviewUrlImg} + ${reviews.reviewImg2}" class="card-img" alt="...">
+                                </div>
+                                <div>
+                                <img th:src="${reviewUrlImg} + ${reviews.reviewImg3}" class="card-img" alt="...">
+                                </div>
                             </div>
                             <div class="col-md-8">
                                 <div class="card-body">
@@ -170,7 +275,8 @@
                                     <label>색상:</label>
                                     <h4 class="card-text" th:text="${reviews.colorName}"></h4>
                                     <p class="card-text" th:text="${reviews.reviewContent}"></p>
-                                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                                    <p class="card-text"><small class="text-muted"
+                                                                th:text="${reviews.orderConfirmDate}"></small></p>
                                 </div>
                             </div>
                         </div>
@@ -327,7 +433,7 @@
 
                 }
                 ajaxSessionStorage();
-            }else{
+            } else {
                 console.log("memId : ~ajax " + memId);
 
                 var selectOption = $('#colorSelect').text();
@@ -383,6 +489,7 @@
         } else {
             a = 0;
             console.log("sessionCheck is  not null");
+
             while (true) {
                 if (stored[a] == value) {
                     alert("세션 이미 저장돼있습니다");
